--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Is the Origin dropped yet?</title>
+
+    <title>Has the Origin dropped yet?</title>
+    <meta name="description" content="Find out if the Origin is still available for an airdrop.">
+
+    <meta property="og:url" content="https://origin-dropped.alostpoet.xyz/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Has the Origin dropped yet?">
+    <meta property="og:description" content="Find out if the Origin is still available for an airdrop.">
+    <meta property="og:image" content="https://alostpoet.xyz/images/socialiteog_origin.png?123423">
+    <meta property="og:image:alt" content="The Poet Socialite">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="origin-dropped.alostpoet.xyz">
+    <meta property="twitter:url" content="https://origin-dropped.alostpoet.xyz/">
+    <meta name="twitter:title" content="Has the Origin dropped yet?">
+    <meta name="twitter:description" content="Find out if the Origin is still available for an airdrop.">
+    <meta name="twitter:image" content="https://alostpoet.xyz/images/socialiteog_origin.png?123123">
+
     <style>
         body, html {
             width: 100%;
