--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <div id="dropped"></div>
     </div>
 </div>
+<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Forigin-dropped.alostpoet.xyz&count_bg=%23005788&title_bg=%23000000&icon=&icon_color=%23E7E7E7&title=Origins+checked+today+%2F+all+time&edge_flat=false"/>
 <script type="module" src="./dist/app.js?v=1633038910963"></script>
 </body>
 </html>
