--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <p>Retrieving Poet information...</p>
     </div>
 
-    <div class="page" id="noCachePage">
+    <div class="page centered" id="noCachePage">
         <a onclick="pageNav.back()">&larr; Back</a>
-        <span id="progress"></span>
-        <p>Gathering intel...</p>
+        <p>Caching Origin data...</p>
+        <p><span id="progress"></span></p>
     </div>
 
     <div class="page" id="results">
@@ -126,6 +126,6 @@
     </div>
 </div>
 <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Forigin-dropped.alostpoet.xyz&count_bg=%23005788&title_bg=%23000000&icon=&icon_color=%23E7E7E7&title=Origins+checked+today+%2F+all+time&edge_flat=false"/>
-<script type="module" src="./dist/app.min.js?v=1633042481515"></script>
+<script type="module" src="./dist/app.min.js?v=1633042631700"></script>
 </body>
 </html>
